# Solitario

./: CMakeLists.txt  MakeFile  main.cpp
Carta/: Carta.cpp  Carta.h
Cola/: Cola.cpp  Cola.h
ListaDoblementeEnlazada/: ListaDoblementeEnlazada.cpp  ListaDoblementeEnlazada.h
Nodo/: Nodo.cpp  Nodo.h
Pila/: Pila.cpp  Pila.h
